Update presto.sh to fix startup bug, port to 8060 and adding connector configs